Fix alignment issues mobile view

--- a/src/app/components/dashboard/landing/home/home.component.scss
+++ b/src/app/components/dashboard/landing/home/home.component.scss
@@ -1,4 +1,4 @@
-* {margin: 0; padding: 0;}
+
 
 .menu nav {
   margin-right: 20px !important;
